Modified project settings

--- a/project.config
+++ b/project.config
@@ -21,3 +21,6 @@
 	push = +force group user/kelepirci (kelepirci)
 	pushTag = group user/kelepirci (kelepirci)
 	pushSignedTag = group user/kelepirci (kelepirci)
+[receive]
+	requireSignedOffBy = true
+	requireChangeId = true
