--- a/project.config
+++ b/project.config
@@ -3,24 +3,24 @@
 [access]
 	inheritFrom = All-Projects
 [access "refs/*"]
-	owner = group user/kelepirci (kelepirci)
+	owner = group user/kelepirci
 [access "refs/for/refs/*"]
-	read = group user/kelepirci (kelepirci)
-	push = group user/kelepirci (kelepirci)
-	label-Code-Review = -2..+2 group user/kelepirci (kelepirci)
-	label-Verified = -1..+1 group user/kelepirci (kelepirci)
-	rebase = group user/kelepirci (kelepirci)
-	removeReviewer = group user/kelepirci (kelepirci)
-	submit = group user/kelepirci (kelepirci)
+	read = group user/kelepirci
+	push = group user/kelepirci
+	label-Code-Review = -2..+2 group user/kelepirci
+	label-Verified = -1..+1 group user/kelepirci
+	rebase = group user/kelepirci
+	removeReviewer = group user/kelepirci
+	submit = group user/kelepirci
 [access "refs/heads/*"]
-	read = group user/kelepirci (kelepirci)
-	create = group user/kelepirci (kelepirci)
-	push = +force group user/kelepirci (kelepirci)
-	pushMerge = group user/kelepirci (kelepirci)
+	read = group user/kelepirci
+	create = group user/kelepirci
+	push = +force group user/kelepirci
+	pushMerge = group user/kelepirci
 [access "refs/tags/*"]
-	push = +force group user/kelepirci (kelepirci)
-	pushTag = group user/kelepirci (kelepirci)
-	pushSignedTag = group user/kelepirci (kelepirci)
+	push = +force group user/kelepirci
+	pushTag = group user/kelepirci
+	pushSignedTag = group user/kelepirci
 [receive]
 	requireSignedOffBy = true
 	requireChangeId = true
